Refactor LeetCode organization workflow
Refactor workflow to organize LeetCode solutions into a dedicated folder and extract performance metrics from commit messages.

--- a/.github/workflows/organize-leetcode.yml
+++ b/.github/workflows/organize-leetcode.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'Leetcode/**'  # Don't trigger when we organize into Leetcode folder
   workflow_dispatch:
 
 jobs:
@@ -23,30 +21,85 @@ jobs:
           # Create Leetcode folder if it doesn't exist
           mkdir -p Leetcode
           
-          # Find all folders starting with numbers (LeetCode problem format)
-          moved=false
+          # Get the latest commit message
+          commit_msg=$(git log -1 --pretty=%B)
+          echo "Commit message: $commit_msg"
           
+          # Track if we made any changes
+          changes_made=false
+          
+          # Find all folders starting with numbers (LeetCode problem format)
           for dir in [0-9]*-*/; do
             # Remove trailing slash
             dir_name="${dir%/}"
             
             if [ -d "$dir_name" ]; then
-              echo "Moving $dir_name to Leetcode/"
-              mv "$dir_name" Leetcode/
-              moved=true
+              echo "Found LeetCode problem folder: $dir_name"
+              
+              # Extract time and space from commit message
+              # Format: "Time: 3 ms (57.02%), Space: 46.9 MB (30.7%)"
+              time_value=""
+              space_value=""
+              
+              if [[ "$commit_msg" =~ Time:\ ([0-9]+)\ ms.*Space:\ ([0-9.]+)\ MB ]]; then
+                time_value="${BASH_REMATCH[1]}ms"
+                space_value="${BASH_REMATCH[2]}MB"
+                echo "  -> Extracted performance: Time=${time_value}, Space=${space_value}"
+              fi
+              
+              # Create target directory structure
+              mkdir -p "Leetcode/$dir_name"
+              
+              # Determine solution folder name
+              if [ -n "$time_value" ] && [ -n "$space_value" ]; then
+                # Option 3: Performance-based naming
+                solution_folder="solution-${time_value}-${space_value}"
+              else
+                # Option 1: Timestamp fallback
+                timestamp=$(date +"%Y-%m-%d-%H%M%S")
+                solution_folder="solution-${timestamp}"
+                echo "  -> Could not extract performance, using timestamp"
+              fi
+              
+              target_path="Leetcode/$dir_name/$solution_folder"
+              echo "  -> Moving to $target_path"
+              
+              # If this exact solution already exists, add a suffix
+              counter=1
+              original_target="$target_path"
+              while [ -d "$target_path" ]; do
+                target_path="${original_target}-v${counter}"
+                counter=$((counter + 1))
+              done
+              
+              # Create the solution directory and move contents
+              mkdir -p "$target_path"
+              mv "$dir_name"/* "$target_path/" 2>/dev/null || true
+              
+              # Remove the now-empty original directory
+              rmdir "$dir_name" 2>/dev/null || true
+              
+              changes_made=true
             fi
           done
           
-          # Set output for next step
-          echo "moved=$moved" >> $GITHUB_OUTPUT
-        id: move_files
+          if [ "$changes_made" = false ]; then
+            echo "No LeetCode folders found in root directory"
+          fi
           
       - name: Commit and push changes
-        if: steps.move_files.outputs.moved == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
+          # Stage all changes
           git add -A
-          git commit -m "🤖 Auto-organize: Move LeetCode solutions to Leetcode folder"
-          git push
+          
+          # Check if there are changes to commit
+          if ! git diff --staged --quiet; then
+            git commit -m "🤖 Auto-organize: Archive LeetCode solution with performance metrics"
+            git push
+            echo "Changes committed and pushed successfully"
+          else
+            echo "No changes to commit"
+          fi
