--- a/.github/workflows/organize-leetcode.yml
+++ b/.github/workflows/organize-leetcode.yml
@@ -85,8 +85,8 @@ jobs:
           
       - name: Commit and push changes
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "sarva-20"
+          git config user.email "tarshuponns@gmail.com"
           
           # Stage all changes
           git add -A
